# linkedin-jobs-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: market_us_tech.yaml  smoke.yaml
data/labels/: golden_titles.csv
docs/: index.html  insights_report.md
notebooks/archive/: LinkedIn_job_scraping.ipynb
reports/market_us_tech_full_20260502/: insights_report.html
src/linkedin_jobs/: __init__.py  classifier.py  cli.py  collector.py  config.py  models.py  parser.py  quality.py  report.py  sampling.py  storage.py  urls.py
tests/: test_classifier.py  test_golden_titles.py  test_parser.py  test_storage_quality_report.py  test_urls.py
tests/fixtures/: detail_page.html  search_results.html
